--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,7 @@
     <string name="delete_crime"> Delete Crime</string>
     <string name="no_crimes_reported">No Crimes Reported</string>
     <string name="create_crime">create crime</string>
-
+    <string name="delete_the_crime">Would you like to delete this crime?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
